# cpp-sentiment-engine

./: .gitignore  CMakeLists.txt  README.MD
data/: dataset.json  model.json  sample.json  sentiment_lexicon.json
include/: features.h  model.h  preprocess.h  tfdif.h
src/: features.cpp  main.cpp  model.cpp  preprocess.cpp  sentiment_cli.cpp  tfdif.cpp
